# realworld

./: .env  .gitignore  Cargo.toml  Dockerfile-debug  docker-compose.yaml  readme.md
migrations/20180216145046_create_users/: up.sql
migrations/20180217174308_alter_users_add_email/: down.sql  up.sql
migrations/20180218181007_alter_users_rename_password/: down.sql  up.sql
migrations/20180219143315_alter_users_add_bio_image/: down.sql  up.sql
migrations/20180221131839_followers/: down.sql  up.sql
migrations/20180221164510_articles/: down.sql  up.sql
migrations/20180227205500_favorites/: down.sql  up.sql
migrations/20180301201253_rename_article_fields/: down.sql  up.sql
migrations/20180306225739_remove_article_tag_list_contrains/: down.sql  up.sql
migrations/20180307210435_alter_articles_modify_dates/: down.sql  up.sql
migrations/20180310122943_create_comments_table/: down.sql  up.sql
src/: article.rs  comment.rs  main.rs  profile.rs  types.rs  utils.rs
src/db/: mod.rs  schema.rs
src/users/: mod.rs  models.rs  utils.rs
